--- a/profile/README.adoc
+++ b/profile/README.adoc
@@ -7,8 +7,8 @@ image::https://github.com/tbt-post/tbtapi-docs/blob/master/images/tbt-logo-full.
 Initially built as an enterprise solution for kasta.ua (ex modnakasta) during its digital transformation.
 To day the platform empowers different on-line projects by providing all-in-one toolchain and standalone features to drive retail and warehousing in Eastern Europe.
 
-For a public market TBT Cloud supplies SaaS-es to carry on warehousing and logistic (WMS), 
-manage branches and deliveries (BMS) and also wide range of other tools together with builtins 
-for financial integrations accomplished by own deep expertise.
+For a public market **TBT Cloud** supplies SaaS-es to carry on warehousing and logistic (**WMS**), 
+manage branches and deliveries (**BMS**) and also wide range of other tools together with builtins 
+for **financial integrations** accomplished by own **deep expertise**.
 
 Follow us on https://www.linkedin.com/products/tbt-cloud/[LinkedIn] to stay informed and to get fresh insights.
