--- a/profile/README.adoc
+++ b/profile/README.adoc
@@ -2,7 +2,7 @@
 
 image::https://github.com/tbt-post/tbtapi-docs/blob/master/images/tbt-logo-full.png[TBT Cloud,400,role="right"]
 
-**TBT Cloud** is a turnkey cloud solution to handle retail, warehousing and e-commerce businesses. 
+**TBT Cloud** is the turnkey cloud solution to boost and empower retail, warehousing and e-commerce businesses. 
 
 Initially built as an enterprise solution for kasta.ua (ex modnakasta) during its digital transformation.
 To day the platform empowers different on-line projects by providing all-in-one toolchain and standalone features to drive retail and warehousing in Eastern Europe.
