--- a/profile/README.adoc
+++ b/profile/README.adoc
@@ -1,6 +1,6 @@
 = TBT Cloud
 
-image::/TBT-Cloud-icon-512px.png[TBT Cloud,200,role="right"]
+image::../TBT-Cloud-icon-512px.png[TBT Cloud,200,role="right"]
 
 **TBT Cloud** is the turnkey cloud solution to boost and empower retail, warehousing and e-commerce businesses. 
 
